--- a/client/src/Page/page.css
+++ b/client/src/Page/page.css
@@ -47,3 +47,10 @@
 }
 
 /* LOGIN PAGE */
+
+/* RESPONSIVE PAGE */
+@media only screen and (max-width: 1024px) {
+  .HomePage {
+    flex-direction: column;
+  }
+}
