--- a/client/src/components/chart/chart.css
+++ b/client/src/components/chart/chart.css
@@ -11,3 +11,11 @@
   display: flex;
   padding: 1.2rem;
 }
+
+/* RESPONSIVE */
+@media only screen and (max-width: 1024px) {
+  /* 차트 */
+  .monthly_calories_chartContainer {
+    min-width: none;
+  }
+}
