--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -28,7 +28,9 @@
 
 .header_user_info_container {
   display: flex;
+  flex-direction: column;
   align-items: flex-end;
+  justify-content: space-around;
 }
 .header_user_info_container div {
   display: flex;
@@ -59,4 +61,12 @@
   border: 1px solid var(--borderLine-color); */
   background-color: rgb(215, 215, 255);
   transition: all 0.5s;
+}
+
+/* RESPONSIVE */
+@media only screen and (max-width: 1024px) {
+  /* 헤더 */
+  .header_user_info_container {
+    margin-right: 15px;
+  }
 }
