--- a/client/src/components/sideChart/sideChart.css
+++ b/client/src/components/sideChart/sideChart.css
@@ -7,6 +7,7 @@
   border-left-width: 1px;
   border-left-style: solid;
   overflow-y: scroll;
+  transition: 0.8s;
 }
 .SideChart > div {
   width: 100%;
@@ -147,7 +148,7 @@
 .editor_input_container {
 }
 .editor_input_container input {
-  width: 50px;
+  width: 72px;
   padding: 5px 10px;
   font-size: 1.2rem;
   border-radius: 5px;
@@ -180,4 +181,13 @@
   align-items: center;
 }
 .sideChart_datepicker {
+}
+
+/* RESPONSIVE */
+@media only screen and (max-width: 1024px) {
+  /* 사이드 차트 */
+  .SideChart {
+    position: fixed;
+    right: -100%;
+  }
 }
