--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,3 +48,10 @@ a {
   justify-content: center;
   align-items: center;
 }
+
+/* RESPONSIVE */
+@media only screen and (max-width: 1024px) {
+}
+
+@media only screen and (max-width: 630px) {
+}
