--- a/client/src/components/sideChart/sideChart.css
+++ b/client/src/components/sideChart/sideChart.css
@@ -38,6 +38,9 @@
   align-items: center;
 }
 .sideChart_information_container > div div:nth-child(2) button {
+  cursor: pointer;
+  color: var(--button-text-color);
+  font-weight: 600;
   width: 100%;
   border: none;
   border-radius: 5px;
@@ -94,7 +97,7 @@
 
 /* EDDITOR */
 .edditor {
-  background-color: rgb(207, 206, 206);
+  background-color: var(--progressBar-color);
   position: absolute;
   top: 0;
   bottom: 0;
@@ -106,12 +109,14 @@
 }
 .edditor_contents_container {
   position: relative;
-  background-color: rgb(153, 151, 151);
+  background-color: var(--listItem-color);
   width: 80%;
   height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 5px;
+  box-shadow: 4px 6px 7px 0px rgb(0 0 0 / 22%);
 }
 .editor_contents {
   margin-top: 10px;
@@ -186,4 +191,7 @@
 /* RESPONSIVE */
 @media only screen and (max-width: 1024px) {
   /* 사이드 차트 */
+  .SideChart {
+    background-color: var(--background-color);
+  }
 }
