--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,14 @@
 :root {
-  --background-color: rgb(250, 250, 250);
+  --background-color: #e2e7ee;
   --borderLine-color: rgb(160, 160, 160);
+  --listItem-color: #ced4e2;
+  --topBar-color: aliceblue;
   --text-main: rgba(41, 41, 41, 1);
   --text-sub: rgb(117, 117, 117);
-  --button-color: #b4d5e5;
-  --button-hover-color: #a1cade;
-  --progressBar-color: #b4d5e5;
+  --button-color: lightcoral;
+  --button-text-color: whitesmoke;
+  --button-hover-color: rgb(243, 117, 117);
+  --progressBar-color: #e8d0d7;
   --pane-padding: 5px 42px;
 }
 
@@ -22,7 +25,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-div {
+.background {
   background-color: var(--background-color);
 }
 * {
