--- a/client/src/Page/page.css
+++ b/client/src/Page/page.css
@@ -36,6 +36,7 @@
   justify-content: center;
   /* align-items: center; */
   /* background-color: aqua; */
+  box-shadow: var(--box-shadow);
 }
 .LoginPage_wrapper form input {
   padding: 0.5rem;
@@ -43,7 +44,14 @@
 }
 .LoginPage_wrapper form button {
   padding: 0.5rem;
+  border: none;
   width: 70%;
+  background-color: var(--button-color);
+  color: var(--button-text-color);
+  cursor: pointer;
+}
+.LoginPage_wrapper form button:hover {
+  background-color: var(--button-hover-color);
 }
 
 /* LOGIN PAGE */
