--- a/client/src/components/posts/posts.css
+++ b/client/src/components/posts/posts.css
@@ -71,7 +71,7 @@
 }
 
 /* 페이지네이션 */
-.pagination_wrapper {
+/* .pagination_wrapper {
   padding: 1rem 2rem;
   display: flex;
   justify-content: center;
@@ -81,8 +81,27 @@
 }
 .pagination_num {
   padding: 0.5rem;
-}
-.pagination_num:hover {
-  background-color: var(--listItem-color);
   cursor: pointer;
+} */
+
+/* PAGINATION */
+.pagination_container {
+}
+.pagination_button {
+  cursor: pointer;
+  padding: 0.1rem 0.3rem;
+  color: var(--button-text-color);
+  border: none;
+  border-radius: 5px;
+  background-color: var(--button-color);
+}
+.pagination_number {
+  cursor: pointer;
+  padding: 0.1rem 0.3rem;
+  border-radius: 5px;
+  transition: 0.2s;
+}
+.pagination_number:hover {
+  background-color: lightgray;
+  transition: 0.2s;
 }
