--- a/client/src/components/write/write.css
+++ b/client/src/components/write/write.css
@@ -1,4 +1,4 @@
-/* editor */
+/* EDITOR */
 .quill_container {
   /* height: 400px; */
   width: 100%;
@@ -8,6 +8,7 @@
   align-items: center;
 }
 .editor_container > input {
+  border-radius: 5px 5px 0 0;
   font-weight: bold;
   font-size: 1.3rem;
   padding: 0.5rem 1rem;
@@ -22,12 +23,94 @@
   background-color: var(--listItem-color);
 }
 .ql-editor {
-  /* padding: 0; */
   min-height: 320px;
   font-size: 1rem;
   line-height: 1.5;
   background-color: var(--listItem-color);
 }
-/* .ql-editor.ql-blank::before {
-  left: 0px;
-} */
+
+/* TAGBOX */
+.tagBox_container {
+}
+.tagBox_form {
+  display: flex;
+  align-items: center;
+  height: 25px;
+}
+.tagBox_form_input {
+  border-radius: 5px 0 0 5px;
+  padding: 0.2rem;
+  height: 100%;
+  background-color: var(--button-text-color);
+}
+.tagBox_form_button {
+  padding: 0.2rem;
+  border-radius: 0 5px 5px 0;
+  height: 100%;
+  background-color: var(--button-color);
+  color: var(--button-text-color);
+  cursor: pointer;
+}
+.tagList_container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.tagBox_tag {
+  margin-right: 15px;
+  color: var(--button-color);
+}
+
+/* IMAGE UPLOAD BTN */
+.imageBtn_container {
+  margin-top: 10px;
+}
+.imageBtn_label {
+  cursor: pointer;
+  padding: 0.3rem;
+  background-color: cornflowerblue;
+  color: white;
+  font-size: 0.85rem;
+  border: solid 1px var(--borderLine-color);
+  border-radius: 5px;
+}
+.imageBtn_file {
+  display: none;
+}
+.preview_container {
+  height: 150px;
+  width: 100px;
+  margin-top: 10px;
+}
+.preview_img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+/* WRITE BUTTON */
+.writeBtn_container {
+  height: 25px;
+  display: flex;
+  margin-top: 10px;
+}
+.writeBtn_create_update {
+  height: 100%;
+  padding: 0.2rem 0.6rem;
+  border: none;
+  background-color: cornflowerblue;
+  margin-right: 15px;
+  color: var(--button-text-color);
+  cursor: pointer;
+  border: solid 1px var(--borderLine-color);
+  border-radius: 5px;
+}
+.writeBtn_cancel {
+  height: 100%;
+  padding: 0.2rem 0.6rem;
+  border: none;
+  background-color: var(--button-hover-color);
+  color: var(--button-text-color);
+  cursor: pointer;
+  border: solid 1px var(--borderLine-color);
+  border-radius: 5px;
+}
