--- a/client/src/index.css
+++ b/client/src/index.css
@@ -52,7 +52,9 @@ a {
   justify-content: center;
   align-items: center;
 }
-
+button {
+  border-radius: 5px;
+}
 /* RESPONSIVE */
 @media only screen and (max-width: 1024px) {
 }
